rspec-tools/tests/resources/invalid-rules/S200/common/rule.adoc
// == How to fix it? is missing
== Why is this an issue?
== Resources
